--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "scheduling",
         "laravel"
     ],
-    "homepage": "ttps://github.com/acquaint-softtech/mixpost.git",
+    "homepage": "https://github.com/acquaint-softtech/mixpost.git",
     "license": "MIT",
     "authors": [
         {
